Forms: second try to fix spacing under fields with validation

--- a/gato-area-mail/src/main/resources/gato-area-mail/css/mailform.scss
+++ b/gato-area-mail/src/main/resources/gato-area-mail/css/mailform.scss
@@ -16,7 +16,7 @@
 }
 
 .valid-icon-cont {
-  display: inline-block;
+  display: block;
 }
 
 .txst-form[data-eq~="600px"] {
